--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development"
+    "serve": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.0",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-loader": "^4.0.0",
